Fixed spacing issues and dev

--- a/cs-4900/src/index.css
+++ b/cs-4900/src/index.css
@@ -30,7 +30,7 @@ h1 {
 }
 
 .song-card {
-  max-width: 80%;
+  /* max-width: 80%; */
   margin: auto;
   background-color: rgb(241, 241, 241);
   border-radius: 10px;
